# Luminomagus-name-still-WIP

./: CMakeLists.txt  LuminoMagi.xlsx  README.md  main.cpp
.github/workflows/: cmake.yml
assets/: Void.fs  card.rcss  card.rml  combat.rcss  combat.rml  draft.rml  mainMenu.rml  postRun.rml  shop.rml  style.rcss
include/: ActiveRun.h  BossFactory.h  Card.h  CardDatabase.h  Effect.h  GameManager.h  IEffect.h  LightPool.h  PlayerInfo.h  Relic.h  RelicEffects.h  RelicFactory.h  RelicZone.h  RoundTracker.h  Shop.h  Status.h  View.h
include/RaylibHomeMadeLibraries/: RaylibInput.h  RaylibRenderInterface.h  RaylibSystemInterface.h
include/backend/: ActiveRun.h  BossFactory.h  Card.h  CardDatabase.h  CardZone.h  Effect.h  GameState.h  IEffect.h  IPlayerPrompt.h  LightPool.h  PlayerInfo.h  RNG.h  Relic.h  RelicEffects.h  RelicFactory.h  RelicZone.h  RoundTracker.h  Shop.h  Status.h
include/ui/: CombatUI.h  DraftMenuUI.h  MainMenuUI.h  ShopUI.h  UIHelpers.h
scripts/: run_cppcheck.sh
src/: ActiveRun.cpp  BossFactory.cpp  Card.cpp  CardDatabase.cpp  CardZone.cpp  Effect.cpp  GameManager.cpp  LightPool.cpp  PlayerInfo.cpp  RelicEffects.cpp  RelicFactory.cpp  RelicZone.cpp  RoundTracker.cpp  Shop.cpp  Status.cpp  View.cpp
src/RaylibHomeMadeLibraires/: RaylibInput.cpp  RaylibRenderInterface.cpp  RaylibSystemInterface.cpp
src/backend/: ActiveRun.cpp  BossFactory.cpp  Card.cpp  CardDatabase.cpp  CardZone.cpp  Effect.cpp  LightPool.cpp  PlayerInfo.cpp  RelicEffects.cpp  RelicFactory.cpp  RelicZone.cpp  RoundTracker.cpp  Shop.cpp  Status.cpp
src/ui/: CombatUI.cpp  DraftMenuUI.cpp  MainMenuUI.cpp  ShopUI.cpp  UIHelpers.cpp
